# tcc_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.c
tcc/share/info/: tcc-doc.info
tcc/share/man/man1/: tcc.1
tinycc/share/doc/: tcc-doc.html
